# FLAME

./: .gitignore  .gitmodules  CMakeLists.txt  FLAME.proto  LICENSE  README.md  __generate-proto.bat  conanfile.txt  premake5.lua  push-to-master.bat  update-submodules.bat
cmake/: FLAMEConfig.cmake.in
include/: Flame.h  Instance.h  Log.h  networking.h
include/spdlog/: common.h  pattern_formatter-inl.h  pattern_formatter.h
include/spdlog/sinks/: rotating_file_sink-inl.h
proto/: FLAME.pb.cc  FLAME.pb.h
src/: Flame.cpp  Log.cpp  networking.cpp  test.cpp
